fix spacing issues for margin note with image

--- a/_sass/_tufte.scss
+++ b/_sass/_tufte.scss
@@ -91,11 +91,11 @@ p {
 
 /* Chapter Epigraphs */
 div.epigraph {
-    margin: 5em 0;
+    margin: 0em 0 5em;
 }
 
 div.epigraph > blockquote {
-    margin-top: 3em;
+    margin-top: 0em;
     margin-bottom: 3em;
 }
 
